<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="#ADD8E6"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/sync_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_your_telegram"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/telegram_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telegram_id"
            android:textAlignment="center"
            android:textSize="14sp"
            android:background="@android:color/white"
            android:padding="8dp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:textAlignment="center"
            android:background="@android:color/white"
            android:padding="8dp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="Submit"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>